Slight spacing correction

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -44,3 +44,8 @@ a.usability-link {
   color: #b1b4b6;
   }
 }
+
+.version-history ul {
+  margin-block-start: 0.1em;
+  padding-inline-start: 0.5em;
+}
